part/part.cpp
@@ -377,8 +377,6 @@ Part::Part(QWidget *parentWidget, QObject *parent, const QVariantList &args)
     //      sLabel->setBuddy( m_searchWidget );
     //      m_searchToolBar->setStretchableWidget( m_searchWidget );
 
-    setupViewerActions();
-
     // [left toolbox optional item: Table of Contents] | []
     m_toc = new TOC(nullptr, m_document);
     connect(m_toc.data(), &TOC::hasTOC, this, &Part::enableTOC);
@@ -406,7 +404,7 @@ Part::Part(QWidget *parentWidget, QObject *parent, const QVariantList &args)
     m_sidebar->addItem(m_reviewsWidget, QIcon::fromTheme(QStringLiteral("draw-freehand")), i18n("Annotations"));
 
     // [left toolbox: Bookmarks] | []
-    m_bookmarkList = new BookmarkList(m_document, m_addBookmark, nullptr);
+    m_bookmarkList = new BookmarkList(m_document, nullptr);
     m_sidebar->addItem(m_bookmarkList, QIcon::fromTheme(QStringLiteral("bookmarks")), i18n("Bookmarks"));
 
     // [left toolbox optional item: Signature Panel] | []
@@ -537,6 +535,8 @@ Part::Part(QWidget *parentWidget, QObject *parent, const QVariantList &args)
     m_document->addObserver(m_signaturePanel);
 
     connect(m_document->bookmarkManager(), &BookmarkManager::saved, this, &Part::slotRebuildBookmarkMenu);
+
+    setupViewerActions();
 
     if (m_embedMode != ViewerWidgetMode) {
         setupActions();
@@ -711,6 +711,7 @@ void Part::setupViewerActions()
     m_addBookmark = KStandardAction::addBookmark(this, SLOT(slotAddBookmark()), ac);
     m_addBookmarkText = m_addBookmark->text();
     m_addBookmarkIcon = m_addBookmark->icon();
+    m_bookmarkList->setAddBookmarkAction(m_addBookmark);
 
     m_renameBookmark = ac->addAction(QStringLiteral("rename_bookmark"));
     m_renameBookmark->setText(i18n("Rename Bookmark"));
